
- handling of comments does probable not work for all cases


0.9.6
--------
HEAD
    - IMPROVEMENT: Added all known properties to CSS2Properties.

    - BUGFIX: Other priority values than ``!important`` are parsed now. Nevertheless they log an ERROR or raise a SyntaxErr.
        **TODO**: Preference setting. Profile?



0.9.6a0 081214
    + **FEATURE**: ``xml.dom.DOMException``\ s raised do now contain infos about the position where the exception occured. An exception might for example have been raised as::

        raise xml.dom.SyntaxErr('the message', 10, 5)

      (where 10 is the line and 5 the column of the offending text).

      Therefor you may **not** simply use ``str(e)`` to get the exception message but you have to use ``msg, line, col = e.args[0], e.args[1], e.args[2]``. Additionally exceptions raised have attributes ``e.line`` and ``e.col``.

    + **FEATURE**: @page rule accepts named page selector now, e.g. ``@page intro`` or ``page main:left``.

    + **FEATURE**: Script ``cssparse`` has new option ``-u URL`` which parses the given URL.

    + **FEATURE**: Started implementation of CSS profiles...
        - moved ``cssutils.css.cssproperties.cssvalues`` to ``cssutils.profiles.css2``
        - added CSS Color Module Level 3 with properties ``color`` and ``opacity``. Not implemented are SVG color names.
        - unknown properties raise a WARNING instead of INFO now
        - refactored CSSValue and subclasses therefore there may be some minor changes in serializing or value reporting
            + ``getStringValue()`` returns a string without quotes or for URIs a value without surrounding ``url(...)`` now

    + FEATURE **experimental**: Added class ``CSSColor`` which is used for RGB, RGBA, HSL, HSLA and HEX color values of ``CSSValue`` respective ``CSSPrimitiveValue``.
